# python-project-52

./: .env  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: statuses.json  users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/eng/LC_MESSAGES/: django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  base_form.html  index.html  login.html  navbar.html  update_user.html
task_manager/templates/labels/: labels.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/tasks/: tasks.html
task_manager/templates/users/: create_user.html  delete_user.html  login.html  users.html
task_manager/tests/: labels_test.py  statuses_test.py  tasks_test.py  tests.py  users_test.py  users_teste.py
task_manager/tests/fixtures/: labels.json  tasks.json
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_delete_user.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
