[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"