[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-bootstrap5>=24.3",
    "flake8>=7.1.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "django-filter>=25.1",
    "psycopg2-binary>=2.9.10",
]

[tool.flake8]
exclude = [
    "migrations",
    "settings.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
